// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadAndHighlightInstructions component when the student has not started making highlights renders 1`] = `
<ReadAndHighlightInstructions
  activeStep={1}
  handleReadTheDirectionsButtonClick={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  removeHighlight={[Function]}
  showReadTheDirectionsButton={false}
  studentHighlights={Array []}
>
  <div
    className="read-and-highlight-container hide-on-mobile"
  >
    <DirectionsSection
      activeStep={1}
      className="hide-on-mobile"
      inReflection={false}
      passage={
        Object {
          "highlight_prompt": "",
        }
      }
    >
      <div
        className="hide-on-mobile"
      >
        <section
          className="directions-section"
        >
          <h3>
            Directions
          </h3>
          <ul>
            <li>
              First, read the highlighting task below.
            </li>
            <li>
              Then, read the text and highlight sentences to complete the task.
            </li>
          </ul>
        </section>
        <section
          className="task-section"
        >
          <h3>
            Task
          </h3>
          <p>
            As you read, highlight two sentences 
            <u />
          </p>
        </section>
      </div>
    </DirectionsSection>
    <section
      className="highlight-section"
    >
      <div
        className="highlight-label-section"
      >
        <h3>
          Highlights
        </h3>
        <Tooltip
          isTabbable={true}
          tooltipText="<p>How to highlight:</p><br/><p>Step 1 - Hover over a sentence</p><br/><p>Step 2 - Click, tap, or select the sentence</p><br/><p>If you change your mind about something you've highlighted, click, tap, or deselect the sentence again to remove the highlight.</p>"
          tooltipTriggerText={
            <img
              alt="Question mark icon"
              src="undefined/images/icons/icons-help.svg"
            />
          }
        >
          <span
            className="quill-tooltip-trigger"
          >
            <span
              className="undefined"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              className="quill-tooltip-wrapper"
            >
              <span
                className="quill-tooltip"
              />
            </span>
          </span>
        </Tooltip>
      </div>
      <div
        className="highlight-instructions"
      >
        <p>
          Your highlights will appear here.
        </p>
      </div>
    </section>
  </div>
</ReadAndHighlightInstructions>
`;

exports[`ReadAndHighlightInstructions component when the student has started making highlights renders 1`] = `
<ReadAndHighlightInstructions
  activeStep={1}
  handleReadTheDirectionsButtonClick={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  removeHighlight={[Function]}
  showReadTheDirectionsButton={false}
  studentHighlights={
    Array [
      "This is a highlight made by a student.",
    ]
  }
>
  <div
    className="read-and-highlight-container"
  >
    <DirectionsSection
      activeStep={1}
      className="hide-on-mobile"
      inReflection={false}
      passage={
        Object {
          "highlight_prompt": "",
        }
      }
    >
      <div
        className="hide-on-mobile"
      >
        <section
          className="directions-section"
        >
          <h3>
            Directions
          </h3>
          <ul>
            <li>
              First, read the highlighting task below.
            </li>
            <li>
              Then, read the text and highlight sentences to complete the task.
            </li>
          </ul>
        </section>
        <section
          className="task-section"
        >
          <h3>
            Task
          </h3>
          <p>
            As you read, highlight two sentences 
            <u />
          </p>
        </section>
      </div>
    </DirectionsSection>
    <section
      className="highlight-section"
    >
      <div
        className="highlight-label-section"
      >
        <h3>
          Highlights
        </h3>
        <Tooltip
          isTabbable={true}
          tooltipText="<p>How to highlight:</p><br/><p>Step 1 - Hover over a sentence</p><br/><p>Step 2 - Click, tap, or select the sentence</p><br/><p>If you change your mind about something you've highlighted, click, tap, or deselect the sentence again to remove the highlight.</p>"
          tooltipTriggerText={
            <img
              alt="Question mark icon"
              src="undefined/images/icons/icons-help.svg"
            />
          }
        >
          <span
            className="quill-tooltip-trigger"
          >
            <span
              className="undefined"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              className="quill-tooltip-wrapper"
            >
              <span
                className="quill-tooltip"
              />
            </span>
          </span>
        </Tooltip>
      </div>
      <DisplayStudentHighlight
        inReflection={false}
        key="This is a highlight made by a student."
        removeHighlight={[Function]}
        studentHighlight="This is a highlight made by a student."
      >
        <div
          className="display-student-highlight"
        >
          <span>
            This is a highlight made by a student.
          </span>
          <button
            className="interactive-wrapper focus-on-light"
            onClick={[Function]}
            type="button"
          >
            <img
              alt="Icon showing a gray circle with a horizontal white line inside of it"
              src="undefined/images/icons/icons-remove.svg"
            />
          </button>
        </div>
      </DisplayStudentHighlight>
    </section>
  </div>
</ReadAndHighlightInstructions>
`;
